# exhaust

./: README.md  exhaust.py  pyproject.toml  scripts.py
assets/modules/: messages.py  scripts_manager.py
assets/scripts/bruteforce/instagram/: main.py
assets/scripts/bruteforce/instagram/database/: session.db
assets/scripts/fishing/: main.py
assets/scripts/fishing/templates/instagram/: login.php
assets/scripts/fishing/templates/vk/: login.php
