[tool.poetry]
name = "exhaust"
version = "0.1.0"
description = ""

license = "GNU GPLv3"
repository = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
sh = "^1.14.1"
prettytable = "^2.0.0"
termcolor = "^1.1.0"
requests = "^2.25.1"
colorama = "^0.4.4"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exhaust = "exhaust:exhaust"
